--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "starname-generator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Generate random real-world star names (IAU/Wikipedia list)",
   "license": "ISC",
   "keywords": [
     "astronomy",
     "stars",
+    "constellations",
     "random",
     "name",
     "generator"
